; ModuleID = '/home/carl/AnghaBench/vlc/lib/extr_media_player.c_libvlc_media_player_set_pause.c'
source_filename = "/home/carl/AnghaBench/vlc/lib/extr_media_player.c_libvlc_media_player_set_pause.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @libvlc_media_player_set_pause(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @vlc_player_Lock(i32* %9)
  %11 = load i32, i32* %4, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %24

13:                                               ; preds = %2
  %14 = load i32*, i32** %5, align 8
  %15 = call i64 @vlc_player_CanPause(i32* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %13
  %18 = load i32*, i32** %5, align 8
  %19 = call i32 @vlc_player_Pause(i32* %18)
  br label %23

20:                                               ; preds = %13
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @vlc_player_Stop(i32* %21)
  br label %23

23:                                               ; preds = %20, %17
  br label %27

24:                                               ; preds = %2
  %25 = load i32*, i32** %5, align 8
  %26 = call i32 @vlc_player_Resume(i32* %25)
  br label %27

27:                                               ; preds = %24, %23
  %28 = load i32*, i32** %5, align 8
  %29 = call i32 @vlc_player_Unlock(i32* %28)
  ret void
}

declare dso_local i32 @vlc_player_Lock(i32*) #1

declare dso_local i64 @vlc_player_CanPause(i32*) #1

declare dso_local i32 @vlc_player_Pause(i32*) #1

declare dso_local i32 @vlc_player_Stop(i32*) #1

declare dso_local i32 @vlc_player_Resume(i32*) #1

declare dso_local i32 @vlc_player_Unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
